--- a/css/style.css
+++ b/css/style.css
@@ -26,11 +26,6 @@ a:focus,
 	color: #ffbc9e;
 }
 
-img {
-	width: 100%;
-	height: auto;
-}
-
 .visually-hidden:not(:focus):not(:active),
 input[type="checkbox"].visually-hidden,
 input[type="radio"].visually-hidden {
@@ -138,22 +133,77 @@ input[type="radio"].visually-hidden {
 }
 
 .site-navigation li {
-	display: inline;
+	display: flex;
 }
 
 .site-navigation a
 .user-navigation a {
-	display: inline;
+	display: flex;
 	vertical-align: middle;
 }
 
 .user-navigation {
 	display: flex;
+	width: 268px;
+	justify-content: space-between;
+
 	margin-bottom: 30px;
 	padding: 0;
 	list-style: none;
 }
 
+.user-navigation li {
+	display: flex;
+	margin: 0;
+	padding: 0;
+
+	background-color: rgba(255, 255, 255, 0.2);
+	font-weight: 400;
+}
+
+.user-navigation li:first-child {
+	width: 35px;
+	height: 35px;
+	background-color: rgba(255, 255, 255, 0.2);
+	background-image: url("../img/loupe.svg");
+	background-size: 19px 21px;
+	background-repeat: no-repeat;
+	background-position: center;
+	border-radius: 50px;
+}
+
+.user-navigation li:nth-child(2) {
+	padding-top: 9px;
+	width: 49px;
+
+	position: relative;
+	padding-left: 45px;
+	padding-right: 17px;
+	border-radius: 50px;
+}
+
+.user-navigation li:last-child {
+	padding-top: 9px;
+
+	position: relative;
+	padding-right: 17px;
+	padding-left: 45px;
+	border-radius: 50px;
+}
+
+.user-navigation li:last-child::before {
+	content: "";
+
+	position: absolute;
+	top: 7px;
+	left: 16px;
+	width: 24px;
+	height: 20px;
+
+	background-image: url(../img/basket.svg);
+	background-repeat: no-repeat;
+	background-position: 0 0;
+}
 
 .site-navigation a,
 .user-navigation a {
@@ -167,19 +217,7 @@ input[type="radio"].visually-hidden {
 	color: #efb89c;
 }
 
-.header-contacts {
-	position: absolute;
-	right: 27px;
-	top: 50px;
-}
-
-.user-navigation .login-link {
-	position: relative;
-	padding-left: 50px;
-	background-color: rgba(255, 255, 255, 0.2);
-}
-
-.login-link::before {
+.user-navigation li:nth-child(2)::before {
 	content: "";
 
 	position: absolute;
@@ -188,12 +226,25 @@ input[type="radio"].visually-hidden {
 	width: 24px;
 	height: 20px;
 
-	background-image: url(../img/entrance.svg);
+	background-image: url(../img/entrance.png);
 	background-repeat: no-repeat;
 	background-position: 0 0;
-	background-color: rgba(255, 255, 255, 0.2);
+}
 
-	opacity: 0.3;
+.header-contacts {
+	position: absolute;
+	right: 27px;
+	top: 73px;	
+}
+
+.time {
+	font-weight: 500;
+}
+
+.phone-number {
+	font-size: 22px;
+	line-height: 29px;
+	font-weight: 500;
 }
 
 .slider {
@@ -288,7 +339,7 @@ input[type="radio"].visually-hidden {
 	font-size: 45px;
 	line-height: 1;
 	margin-top: -50px;
-	margin-bottom: 30px
+	margin-bottom: 30px;
 }
 
 .hits-item-title {
@@ -521,31 +572,59 @@ input[type="radio"].visually-hidden {
 }
 
 .footer-details {
+	position: relative;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
-	width: 350px;
+	width: 400px;
 	font-weight: 400;
 	font-family: "Roboto";
 	text-align: left;
 }
 
-.footer-details li {
+.footer-details p {
 	margin: 0;
 	padding: 0;
 	display: flex;
+	text-decoration: underline;
+}
+
+.details-item {
+	display: flex;
+}
+
+.footer-details li:nth-child(2) {
+	padding-right: 67px;
+}
+
+.footer-details li:first-child::before {
+	content: "";
+	width: 20px;
+	height: 16px;
+	position: absolute;
+	top: 0px;
+	left: 20px;
+
+	background-image: url("../img/heart.svg");
+  	background-repeat: no-repeat;
 }
 
 .footer-copyright {
-
+	list-style: none;
+	display: flex;
+	flex-direction: column;
+	font-weight: 400;
 }
 
 .footer-copyright img {
 	width: 110px;
 	height: 41px;
-	position: absolute;
 	right:27px;
 	top: 10px;
+}
+
+.footer-copyright-text {
+	font-weight: 400;
 }
 
 .modal {
@@ -737,13 +816,12 @@ input[type="radio"].visually-hidden {
 .filter fieldset {
 	border: none;
 	color: #ffffff;
-	
-
 }
 
 .filter legend {
 	font-size: 14px;
 	line-height: 16px;
+	font-weight: 500;
 }
 
 .sort-wrapper {
@@ -751,6 +829,7 @@ input[type="radio"].visually-hidden {
 	flex-wrap: wrap;
 	width: 864px;
 	justify-content: space-between;
+	position: relative;
 }
 
 .sort-background {
@@ -758,19 +837,72 @@ input[type="radio"].visually-hidden {
 	background-color: rgba(255, 255, 255, 0.2);
   	color: #ffffff;
   	border-radius: 40px;
+  	padding: 6px 19px;
 }
 
 .sort:first-child {
 	width: 194px;	
 }
 
+select {
+  border-radius: 10px;
+  -webkit-appearance: none;
+  line-height: 1em;
+  /* for FF */
+  -moz-appearance: none;
+  text-indent: 0.01px; 
+  text-overflow: '';
+  /* for IE */
+  -ms-appearance: none;
+  appearance: none;
+}
+ 
+select::-ms-expand {
+  display: none;
+}
+
+.select {
+	list-style: none;
+}
+
 .sort:nth-child(2) {
 	width: 218px;
 }
 
-.sort:nth-child(3) {
-	width: 410px;
+input[type=range]:focus {
+  outline: none;
 }
+
+.sort:nth-child(3) {
+	display: flex;
+	justify-content: space-between;
+	width: 410px;
+	height: 48px;
+}
+
+.sort:nth-child(3) input {
+	display: none;
+}
+
+.sort:nth-child(3) input:hover + label {
+	cursor: pointer;
+}
+
+.sort:nth-child(3) label {
+	font-weight: 400;
+
+	display: block;
+	position: relative;
+}
+
+.sort:nth-child(3) input:checked + label > img {
+	background-image: url("../img/radio-on.svg");
+}
+
+.sort:nth-child(3) span {
+	padding-bottom: 30px;
+}
+
 
 .sort:nth-child(4) {
 	display: flex;
@@ -778,16 +910,53 @@ input[type="radio"].visually-hidden {
 	width: 703px;
 }
 
+
+.sort:nth-child(4) input {
+	display: none;
+}
+
 .sort:nth-child(4) li {
+	display: inline;
 	padding: 0;
 	margin: 0;
-	display: inline;
+}
+
+.sort:nth-child(4) input:checked + label > img {
+	background-image: url("../img/checkbox-on.svg");
 }
 
 .sort:last-child {
-	width: 137px;
+	position: absolute;
+	bottom: 0;
+	right: 0;
 }
 
+.filter-button {
+	background-color: transparent;
+	width: 148px;
+	height: 38px;
+	border: none;
+	font: inherit;
+	color: #ffffff;
+	border: 3px solid #ffffff;
+	border-radius: 50px;
+	background-color: rgba(255, 255, 255, 0.2);
+}
+
+.filter-button:hover {
+	background-color: #ffffff;
+	border: none;
+	font: inherit;
+	color: #353535;
+}
+
+.filter-button:focus {
+	background-color: rgb(237, 237, 237);
+  	box-shadow: inset 0px 2px 1px 0px rgba(105, 105, 105, 0.004);
+  	border: none;
+	font: inherit;
+	color: #353535;
+}
 
 .filer ul {
 	list-style: none;
@@ -800,29 +969,36 @@ input[type="radio"].visually-hidden {
 .articles-list {
 	display: flex;
 	flex-wrap: wrap;
+	min-width: 860px;
+	list-style: none;
+	justify-content: space-between;
+	margin-bottom: 36px;
 }
 
 .articles-list div {
+	font-weight: 400;
 	display: flex;
 	padding: 0;
 	flex-wrap: wrap;
 }
 
 .icecream-item {
-	width: 280px;
-	min-height: 285px;
-	margin-bottom: 20px;
-	margin-right: 20px;
+	width: 267px;
 }
 
-.icecream-item-title {
+.icecream-item h3 {
+	font-weight: 400;
 	font-size: 16px;
 	line-height: 22px;
+	text-align: center;
+	text-decoration: underline;
 }
 
 .icecream-item-price {
 	font-size: 45px;
-	line-height: 45px;
+	line-height: 45px;	
+	margin-top: -50px;
+	margin-bottom: 30px;
 }
 
 .icecream-item-price span {
@@ -834,23 +1010,73 @@ input[type="radio"].visually-hidden {
 
 }
 
+.icecream-item:hover {
+	background-color: rgba(255, 255, 255, 0.2);
+	border-radius: 10px;
+	width: 297px;
+	height: 408px;
+	position: relative;
+}
+
+.icecream-item:hover:after {
+	display: block;
+	font-size: 30.765px;
+  	font-family: "Roboto";
+  	color: rgb(255, 255, 255);
+  	font-weight: 500;
+  	line-height: 1.375;
+  	text-align: center;
+  	text-shadow: 0px 2px 5px rgba(160, 32, 11, 0.76);
+	background-image: linear-gradient(90deg, #e74a35, #f26843);
+	border: none;
+	font-size: 18px;
+	border-radius: 40px;
+	box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, .64);
+	padding: 13px 17px;
+	position: absolute;
+	top: 0;
+	left: 0;
+
+}
+
+.icecream-item:hover a {
+	color: #ffffff;
+}
+
 .pagination-list {
+	position: relative;
 	list-style: none;
 	display: flex;
 	justify-content: flex-end;
 	margin-right: 27px;
+	font-weight: 400;
+}
+
+.pagination-item-current a {
+	color: #000000;
+	background-color: #ffffff;
+	background-position: 50% 50%;
+	border-radius: 50px;
 }
 
 .pagination-item a {
 	color: #ffffff;
-	padding-left: 15px;
+	padding: 5px 10px;
 }
 
-.pagination-item a:hover,
 .pagination-item a:focus,
 .pagination-item a:active {
 	color: #849d8f;
 	background-color: #ffffff;
+	background-position: 50% 50%;
+	border-radius: 50px;
+}
+
+.pagination-item a:hover {
+	color: #ffffff;
+	background-color: rgba(255, 255, 255, 0.2);
+	background-position: 50% 50%;
+	border-radius: 50px;
 }
 
 .modal-login {
